[package]
name = "steam-api-client"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json"] }
bytes = "1.4.0"
dotenv = "0.15.0"
serde = {version = "1.0.159", features = ["derive"]}
futures = "0.3.28"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing-futures = "0.2.5"
tracing = "0.1.37"